# taga3s.dev-images

./: .gitignore  README.md  lefthook.yml  package-lock.json  package.json  wrangler.jsonc
.github/workflows/: check-codebase.yaml  deploy-to-prod.yaml
assets/data/: work_experiences.json  work_history.json  works.json
src/: data.ts  index.ts
tools/ghtracker/: Cargo.toml  README.md
tools/ghtracker/src/: main.rs
tools/github-issues-tracker-cli/: Cargo.toml  README.md
tools/sanpincha/: Cargo.toml  README.md
tools/sanpincha/assets/data/: certifications.json  work_history.json  works.json
tools/sanpincha/src/: main.rs  utils.rs
