[package]
name = "sanpincha"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.31"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-macros = { version = "2.4.0" }
