[package]
name = "sanpincha"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.32", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-macros = { version = "2.5.0" }
